Remove the image from IDB as it has performance issues on mobile and add a loading image

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -44,6 +44,10 @@ html, body, div.ng-scope, div[ng-view], div.container-fluid {
 	box-shadow: 0 0 10px gray;
 }
 
+.mission-name>h4{
+	padding-right:30px;
+}
+
 .mission-main {
 	background-color: white;
 }
